Created first landing page - giantuor.ch. From now on, it's better to extend website on development branches.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <meta name="author" content="Gian Tuor">
     <meta name="description" content="Portfolio Page.">
     <!--<link rel="icon" href="img/html5.png" type="image/x-icon"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>giantuor.ch</title>
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <h1>Gian Tuor</h1>
+        
     </header>
 
     <main>
-
+        <div id="main-title">
+            <h1>giantuor.ch</h1>
+        </div>
     </main>
     <footer>
 
