Added the Rätsel ? Link to Website

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     </header>
 
     <main>
-        <div id="main-title">
-            <h1>giantuor.ch</h1>
-        </div>
+        <h1>giantuor.ch</h1>
+        <h2><a href="">Rätsel ?</a></h2>
     </main>
     <footer>
 
