--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     </header>
 
     <main>
-        <div id="main-title">
+        <div id="title-container">
             <h1>giantuor.ch</h1>
+        </div>
+        <div id="socials-container">
+            <a href="https://www.linkedin.com/in/giantuor/" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon">
+            </a>
+            <a href="https://github.com/giantuor" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/github.png" alt="My GitHub profile" class="icon">
+            </a>
         </div>
     </main>
     <footer>
