--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <title>giantuor.ch</title>
+    <title>Gian Tuor</title>
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
@@ -24,10 +24,10 @@
         </div>
         <div id="socials-container">
             <a href="https://www.linkedin.com/in/giantuor/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon">
+                <img src="./assets/linkedin.png" alt="Gian Tuor's LinkedIn profile" class="icon">
             </a>
             <a href="https://github.com/giantuor" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/github.png" alt="My GitHub profile" class="icon">
+                <img src="./assets/github.png" alt="Gian Tuor's GitHub profile" class="icon">
             </a>
         </div>
     </main>
