added light and dark mode

--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
         </div>
         <div id="socials-container">
             <a href="https://www.linkedin.com/in/giantuor/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/linkedin.png" alt="Gian Tuor's LinkedIn profile" class="icon">
+                <img src="./assets/linkedin_darkmode.png" alt="Gian Tuor's LinkedIn profile" class="icon" id="linkedin-icon">
             </a>
             <a href="https://github.com/giantuor" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/github.png" alt="Gian Tuor's GitHub profile" class="icon">
+                <img src="./assets/github_darkmode.png" alt="Gian Tuor's GitHub profile" class="icon" id="github-icon">
             </a>
         </div>
+        <button class="toggle-button" onclick="toggleMode()">Toggle Mode</button>
     </main>
     <footer>
 
     </footer>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
